examples/test/testpolicy15043.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15043
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key45: value45
      key42: value7
      key20: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value29
      podSelector:
        matchLabels:
          key42: value26
